[gd_scene load_steps=9 format=3 uid="uid://b4lpibw7t5gd4"]

[ext_resource type="Script" path="res://scenes/game/systems/orb.gd" id="1_hefnv"]

[sub_resource type="Gradient" id="Gradient_wrs0j"]
offsets = PackedFloat32Array(0, 0.490741, 0.532407, 0.606481, 0.717593)
colors = PackedColorArray(1, 1, 1, 1, 0.159763, 0.159763, 0.159763, 1, 0.134346, 0.134346, 0.134346, 1, 0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2bb6q"]
gradient = SubResource("Gradient_wrs0j")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_px106"]
radius = 32.0624

[sub_resource type="Animation" id="Animation_b4muj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_age6f"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.3, 0.3), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_238hy"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5), Vector2(1, 1), Vector2(0.1, 0.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tm21g"]
_data = {
"RESET": SubResource("Animation_b4muj"),
"appear": SubResource("Animation_age6f"),
"die": SubResource("Animation_238hy")
}

[node name="orb" type="Area2D"]
script = ExtResource("1_hefnv")
color = Color(0, 1, 1, 1)
type = "HEAL"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 7
texture = SubResource("GradientTexture2D_2bb6q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_px106")

[node name="TimerToDie" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tm21g")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimerToDie" to="." method="_on_timer_to_die_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
